# Bamboo

./: .gitignore  ARCHITECTURE_V2.md  CODEX_ANALYSIS_REPORT.md  CONFIG_API_REPORT.md  CONFIG_DESIGN.md  COPILOT_AS_OPENAI_VARIANT.md  Cargo.toml  DEBUG_MODE_REPORT.md  E2E_TEST_REPORT.md  EXAMPLES.rs  FIX_REPORT.md  GATEWAY_DESIGN.md  GATEWAY_INTEGRATION_DESIGN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_DESIGN.md  LOCAL_LLM_TEST_REPORT.md  PHASE1_REFACTOR_DESIGN.md  PROMPT_MEMORY_MODULE_REPORT.md  REAL_E2E_TEST_REPORT.md  REMAINING_ISSUES.md  SIMPLIFICATION_SUMMARY.md  SKILL_SYSTEM_DESIGN.md  TESTING.md  TEST_REPORT.md
bamboo-ui/: TESTING.md  TEST_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
bamboo-ui-vite/: .env.example  README.md  index.html  package-lock.json  package.json
bamboo-ui-vite/src/: App.tsx  index.css
bamboo-ui-vite/src/components/: ThemeProvider.tsx  ThemeToggle.tsx  ToolCallChain.tsx  ToolConfigPanel.tsx
bamboo-ui-vite/src/components/chat/: ChatContainer.tsx  InputArea.tsx  MessageBubble.tsx  MessageList.tsx
bamboo-ui-vite/src/components/layout/: AppLayout.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
bamboo-ui-vite/src/components/memories/: MemoryConfigPanel.tsx
bamboo-ui-vite/src/components/prompts/: PromptConfigPanel.tsx
bamboo-ui-vite/src/components/session/: NewSessionButton.tsx  SessionItem.tsx  SessionList.tsx
bamboo-ui-vite/src/components/settings/: MaskingConfigPanel.tsx  MaskingRuleEditor.tsx  MaskingRuleList.tsx  (+1 more)
bamboo-ui-vite/src/hooks/: useSession.ts  useWebSocket.ts
bamboo-ui-vite/src/pages/: HomePage.tsx  StatsPage.tsx
bamboo-ui-vite/src/stores/: chatStore.ts  configStore.ts  memoryStore.ts  promptStore.ts
bamboo-ui-vite/src/test-utils/: mock-store.ts  setup.ts
bamboo-ui-vite/src/types/: index.ts
bamboo-ui/e2e/: chat.spec.ts  masking.spec.ts  settings.spec.ts
bamboo-ui/src/__tests__/: chat-flow.test.tsx  settings-flow.test.tsx  theme-switching.test.tsx
bamboo-ui/src/app/: globals.css  layout.tsx  page.tsx
bamboo-ui/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
bamboo-ui/src/hooks/: useChat.ts  useConfiguredWebSocket.ts
bamboo-ui/src/lib/: api.ts  websocket.ts
bamboo-ui/src/stores/: backendConfigStore.ts  configStore.ts  sessionStore.ts  themeStore.ts
bamboo-ui/src/test-utils/: fixtures.ts  index.ts  setup.ts
crates/bamboo-cli/: Cargo.toml  README.md
crates/bamboo-cli/src/: main.rs
crates/bamboo-config/: Cargo.toml
crates/bamboo-config/src/: config.rs  lib.rs  manager.rs
crates/bamboo-core/: Cargo.toml
crates/bamboo-core/src/: lib.rs  lib_tests.rs
crates/bamboo-gateway/: Cargo.toml
crates/bamboo-gateway/src/: connection.rs  gateway.rs  lib.rs  router.rs  session.rs
crates/bamboo-llm/: Cargo.toml
crates/bamboo-llm/examples/: provider_usage.rs
crates/bamboo-llm/src/: error.rs  lib.rs
crates/bamboo-llm/tests/: mock_provider.rs
crates/bamboo-masking/: Cargo.toml
crates/bamboo-masking/examples/: usage.rs
crates/bamboo-masking/src/: config.rs  engine.rs  lib.rs
crates/bamboo-mcp/: Cargo.toml
crates/bamboo-mcp/examples/: execute_tools.rs  list_tools.rs
crates/bamboo-mcp/src/: client.rs
crates/bamboo-mcp/src/tools/: command.rs  filesystem.rs
crates/bamboo-memory/: Cargo.toml
crates/bamboo-memory/src/: enhancer.rs  extractor.rs  lib.rs  manager.rs  models.rs
crates/bamboo-observability/: Cargo.toml  INTEGRATION.md  README.md  STRUCTURE.md  config.example.toml
crates/bamboo-observability/examples/: server_integration.rs  simple_test.rs  usage.rs
crates/bamboo-observability/src/: config.rs  error.rs  lib.rs
crates/bamboo-observability/src/config/: bamboo_integration.rs
crates/bamboo-observability/src/health/: mod.rs
crates/bamboo-observability/src/logging/: mod.rs
crates/bamboo-observability/src/metrics/: mod.rs
crates/bamboo-prompt/: Cargo.toml
crates/bamboo-prompt/src/: lib.rs  manager.rs  models.rs  storage.rs
crates/bamboo-router/: Cargo.toml
crates/bamboo-router/src/: lib.rs  message.rs  router.rs
crates/bamboo-router/src/handlers/: chat.rs  command.rs  mod.rs  system.rs
crates/bamboo-server/: Cargo.toml
crates/bamboo-server/src/: agent_runner.rs  event_bus.rs  lib.rs  main.rs  server.rs  skill_loader.rs  state.rs  storage.rs
crates/bamboo-server/src/handlers/: chat.rs  config.rs  llm_api.rs  masking.rs  memories.rs  mod.rs  prompts.rs  stream.rs
crates/bamboo-server/src/middleware/: api_auth.rs  mod.rs
crates/bamboo-server/src/websocket/: connection.rs  gateway.rs  mod.rs  protocol.rs  router.rs  session.rs
crates/bamboo-session/: Cargo.toml
crates/bamboo-session/src/: error.rs  jsonl_storage.rs  lib.rs  session_manager.rs  storage.rs  types.rs
crates/bamboo-skill/: Cargo.toml
crates/bamboo-skill/examples/: usage_example.rs
crates/bamboo-skill/src/: error.rs  lib.rs  manager.rs  manifest.rs  parser.rs  types.rs  watcher.rs
crates/bamboo-tool/: Cargo.toml
crates/bamboo-tool/src/: error.rs  executor.rs  lib.rs  registry.rs  types.rs
crates/bamboo-tui/: Cargo.toml  README.md
crates/bamboo-tui/src/: app.rs  client.rs  main.rs  ui.rs
crates/copilot-forward/: Cargo.toml  README.md
crates/copilot-forward/examples/: gui_mode.rs  headless_mode.rs
crates/copilot-forward/src/: client.rs  lib.rs  ui.rs
crates/copilot-forward/src/auth/: device_code.rs  mod.rs  token.rs
crates/copilot-forward/src/cache/: mod.rs
crates/copilot-forward/src/forward/: mod.rs
docs/: masking_design.md  openai_anthropic_adapter.md  prompt_memory_design.md
docs/api/: llm_api.md
docs/architecture/: README.md  REPORT.md
docs/architecture/diagrams/: component_diagram.mmd  data_flow.mmd  deployment_diagram.mmd  system_architecture.mmd
docs/router/: architecture-diagram.txt  architecture.md
docs/session/: README.md
scripts/: gateway_ws_test.py  test_tools.sh
tests/api/: .env.example  README.md  TEST_REPORT.md  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_agent_loop.py  test_chat_api.py  test_complex_tools.py  test_integration.py  test_performance.py  test_session.py  test_tools.py
(+85 files in other folders)
