[workspace]
members = [
    "crates/bamboo-core",
    "crates/bamboo-config",
    "crates/bamboo-llm",
    "crates/bamboo-mcp",
    "crates/bamboo-server",
    "crates/bamboo-tui",
    "crates/bamboo-cli",
    "crates/bamboo-tool",
    "crates/bamboo-skill",
    "crates/bamboo-gateway",
    "crates/bamboo-router",
    "crates/bamboo-session",
    "crates/bamboo-observability",
]
resolver = "2"
