[workspace]
members = [
    "crates/bamboo-core",
    "crates/bamboo-config",
    "crates/bamboo-llm",
    "crates/bamboo-mcp",
    "crates/bamboo-masking",
    "crates/bamboo-memory",
    "crates/bamboo-prompt",
    "crates/bamboo-server",
    "crates/bamboo-tui",
    "crates/bamboo-cli",
    "crates/bamboo-tool",
    "crates/bamboo-skill",
    "crates/bamboo-session",
]
resolver = "2"
