[package]
name = "bamboo-config"
version = "0.1.0"
edition = "2021"

[lib]
name = "bamboo_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = { version = "6", optional = true }
dirs = "5.0"
thiserror = "1"
tracing = "0.1"
regex = "1"

[features]
default = ["hot-reload"]
hot-reload = ["notify"]
