[package]
name = "bamboo-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
bamboo-core = { path = "../bamboo-core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
