[package]
name = "bamboo-masking"
version = "0.1.0"
edition = "2021"

[lib]
name = "bamboo_masking"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5.0"
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "sync", "macros"] }
