[package]
name = "bamboo-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
bamboo-core = { path = "../bamboo-core" }
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
