[package]
name = "bamboo-observability"
version = "0.1.0"
edition = "2021"
authors = ["Bamboo Team"]
description = "Unified observability infrastructure for Bamboo - logging, metrics, and health checks"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Bamboo config integration
bamboo-config = { path = "../bamboo-config", optional = true }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "time",
] }
tracing-appender = "0.2"

# Metrics collection
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", optional = true }

# Web framework for health endpoints
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Configuration management
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Utility
parking_lot = "0.12"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
