[package]
name = "bamboo-prompt"
version = "0.1.0"
edition = "2021"
description = "System prompt management for Bamboo"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
