[package]
name = "bamboo-router"
version = "0.1.0"
edition = "2021"

[dependencies]
bamboo-core = { path = "../bamboo-core" }
bamboo-gateway = { path = "../bamboo-gateway" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
