[package]
name = "bamboo-server"
version = "0.1.0"
edition = "2021"
authors = ["Nio <nio@example.com>"]
description = "Bamboo HTTP Server - 修复重复事件发送问题"

[[bin]]
name = "bamboo-server"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

# HTTP 框架
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
actix-web = { version = "4", features = ["macros"] }

# WebSocket
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.21"
dashmap = "6"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 异步 trait
async-trait = "0.1"
async-stream = "0.3"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 内部依赖
bamboo-session = { path = "../bamboo-session" }
bamboo-core = { path = "../bamboo-core" }
bamboo-config = { path = "../bamboo-config" }
bamboo-llm = { path = "../bamboo-llm" }
bamboo-skill = { path = "../bamboo-skill" }
bamboo-tool = { path = "../bamboo-tool" }
bamboo-masking = { path = "../bamboo-masking" }
bamboo-prompt = { path = "../bamboo-prompt" }
bamboo-memory = { path = "../bamboo-memory" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
