[package]
name = "bamboo-session"
version = "0.1.0"
edition = "2021"
description = "Bamboo AI Agent Session 持久化存储系统"

[lib]
doctest = false

[dependencies]
bamboo-core = { path = "../bamboo-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"
dashmap = "6"
parking_lot = "0.12"
dirs = "5"
shellexpand = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
