[package]
name = "bamboo-skill"
version = "0.1.0"
edition = "2021"
description = "Skill discovery, loading and hot-reload system for Bamboo"
license = "MIT"

[dependencies]
bamboo-tool = { path = "../bamboo-tool" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
notify = "6.0"
dashmap = "5.0"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
anyhow = "1.0"
