[package]
name = "bamboo-tool"
version = "0.1.0"
edition = "2021"
description = "Tool execution and management system for Bamboo"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
dashmap = "5.0"

[dev-dependencies]
tokio-test = "0.4"
