[package]
name = "copilot-forward"
version = "0.1.0"
edition = "2021"
description = "GitHub Copilot forwarding client with configurable UI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/copilot-forward"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directory handling
dirs = "5.0"

# GUI features (optional)
webbrowser = { version = "1.0", optional = true }
arboard = { version = "3.3", optional = true }
rfd = { version = "0.14", optional = true }

# SSE streaming
eventsource-stream = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["gui", "sse"]
gui = ["webbrowser", "arboard", "rfd"]
headless = []
sse = ["eventsource-stream", "futures"]

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
